# sith

./: .buildinfo  .gitignore  MANIFEST.in  README.md  flowchart.html  genindex.html  index.html  install.html  intro.html  package.json  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: jekyll-gh-pages.yml
_sources/: install.rst.txt  intro.rst.txt
_sources/modules/: sith.g09_stretching.from_extreme.rst.txt  sith.g09_stretching.rst.txt  sith.readers.rst.txt  sith.utils.rst.txt
doc/: conf.py  flowchart.rst  index.rst  install.rst  nada
doc/_static/: custom.css
doc/_templates/: layout.html
doc/doctrees/: environment.pickle  index.doctree  install.doctree
doc/html/: flowchart.html  genindex.html  index.html  install.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/modules/: sith.energy_analysis.rst  sith.g09_stretching.from_extreme.rst  sith.g09_stretching.from_extreme.second_version.rst  sith.g09_stretching.rst  sith.rst  sith.utils.rst  sith.visualize.rst
doc/tutorials/: tutorial_stretching.rst  tutorials.rst
docs/: conf.py  genindex.html  index.html  objects.inv  searchindex.js
docs/doctrees/: environment.pickle  intro.doctree
docs/html/: py-modindex.html
docs/modules/: modules.rst  sith.html
docs/workflow/: analysis.html  extraction.html  output.html
examples/: HLW.ipynb  sith_example.ipynb
modules/: sith.energy_analysis.html  sith.g09_stretching.from_extreme.html  sith.g09_stretching.html  sith.html  sith.readers.html  sith.utils.html  sith.visualize.html
modules/bash_rsts_doc/: basics.html  clean_ds.html  continuous_path.html  create_peptide.html  extr_dofs.html  extract_forces.html  find_blocks.html  find_forces.html  opt_and_forces.html  workflow.html  (+4 more)
tests/: test_importall.py
tutorials/: tutorials.html
workflow/: analysis.html  extraction.html  output.html  visualization.html  workflow.html
(+482 files in other folders)
