[project]
name = "sith"
version = "1.0.0"
description = "Stretched Intramolecular Tension via Hypersurfaces"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hits_mbm", email = "daniel.sucerquia@h-its.org" },
    { name = "Hits_mbm", email = "mikaela.farrugia@h-its.org" }
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]
dependencies = [
    "ase",
    "numpy",
    "matplotlib",
    "sphinx-rtd-theme"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include package data if any (setup.cfg had include_package_data=True)
# You can add specific patterns here if needed.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
sith = "sith.cli.main:main"
